<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_map"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_battery"
                android:icon="@drawable/ic_menu_battery"
                android:title="@string/menu_battery"/>
        <item
                android:id="@+id/nav_gsm"
                android:icon="@drawable/ic_menu_gsm"
                android:title="@string/menu_gsm"/>
        <item
                android:id="@+id/nav_velocity"
                android:icon="@drawable/ic_menu_velocity"
                android:title="@string/menu_velocity"/>

    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <item
                    android:id="@+id/nav_filter"
                    android:icon="@drawable/ic_menu_filter"
                    android:title="@string/menu_filter"/>
        </menu>
    </item>

</menu>
