<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".views.fragments.FilterFragment">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:clipToPadding="true" android:fillViewport="false"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp">
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:cardUseCompatPadding="true" android:layout_marginTop="96dp"
                app:cardPreventCornerOverlap="true">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/coordinatorLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                <CheckBox
                        android:id="@+id/chkMostRecent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/select_at_the_last_record"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>


                <CheckBox
                        android:id="@+id/chkToday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_today" tools:layout_conversion_absoluteHeight="32dp"
                        tools:layout_conversion_absoluteWidth="120dp" tools:layout_conversion_wrapWidth="315"
                        tools:layout_conversion_wrapHeight="84" app:layout_constraintTop_toBottomOf="@+id/chkMostRecent"
                        android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="@+id/chkMostRecent"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
                <TextView
                        android:id="@+id/inputToday"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="20.10.2019"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/chkToday"
                        app:layout_constraintStart_toStartOf="@+id/chkToday" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:layout_marginStart="8dp" tools:text="20.10.2019"/>


                <CheckBox
                        android:id="@+id/chkDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_by_date" tools:layout_conversion_absoluteHeight="32dp"
                        tools:layout_conversion_absoluteWidth="131dp" tools:layout_conversion_wrapWidth="343"
                        tools:layout_conversion_wrapHeight="84" app:layout_constraintTop_toBottomOf="@+id/inputToday"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="@+id/chkToday"/>

                <EditText
                        android:enabled="true"
                        android:id="@+id/inputDate"
                        android:focusable="false"
                        android:clickable="true"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/choose_a_date"
                        tools:layout_conversion_absoluteHeight="45dp"
                        tools:layout_conversion_absoluteWidth="347dp"
                        tools:layout_conversion_wrapWidth="318" tools:layout_conversion_wrapHeight="118"
                        app:layout_constraintTop_toBottomOf="@+id/chkDate"
                        app:layout_constraintStart_toStartOf="@+id/chkDate" android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"/>


                <CheckBox
                        android:id="@+id/chkBetween"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/select_the_period" tools:layout_conversion_absoluteHeight="32dp"
                        tools:layout_conversion_absoluteWidth="139dp" tools:layout_conversion_wrapWidth="365"
                        tools:layout_conversion_wrapHeight="84" app:layout_constraintTop_toBottomOf="@+id/inputDate"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="@+id/chkDate"/>


                <EditText
                        android:enabled="true"
                        android:id="@+id/inputBetweenIn"
                        android:focusable="false"
                        android:clickable="true"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_the_start_date"
                        app:layout_constraintTop_toBottomOf="@+id/chkBetween"
                        app:layout_constraintStart_toStartOf="@+id/chkBetween"
                        android:layout_marginTop="16dp" app:layout_constraintEnd_toStartOf="@+id/inputBetweenOut"
                        android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>


                <EditText
                        android:enabled="true"
                        android:id="@+id/inputBetweenOut"
                        android:focusable="false"
                        android:clickable="true"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_the_date_of_the_end_of_the_period"
                        app:layout_constraintStart_toEndOf="@+id/inputBetweenIn"
                        android:layout_marginStart="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/chkBetween"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"/>


                <EditText
                        android:id="@+id/numberTracks"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_the_number_of_records"
                        android:inputType="number|numberSigned|numberDecimal|numberPassword|phone"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/inputBetweenIn"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="@+id/chkBetween"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>